--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 once_cell = "1.19.0"
-reqwest = { version = "0.11.0", features = ["json", "gzip", "deflate", "brotli"] }
+reqwest = { version = "0.12.12", features = ["json"] }
 serde = { version = "1.0.0", features = ["derive"] }
 serde_json = "1.0.0"
 serde_path_to_error = "0.1.0"
